<resources>
    <string name="app_name">androidthings-iot-robotarm</string>
    <string name="iot_robot_arm_controller">IoT Robot Arm Controller</string>

    <!-- Robot Arm Controls -->
    <string name="control_stop">Stop</string>
    <string name="control_forward">Forward</string>
    <string name="control_reverse">Reverse</string>
    <string name="control_left">Left</string>
    <string name="control_right">Right</string>
    <string name="control_up">Up</string>
    <string name="control_down">Down</string>
    <string name="control_in">In</string>
    <string name="control_out">Out</string>
    <string name="control_open">Open</string>
    <string name="control_close">Close</string>

    <!-- Robot Arm Control Descriptions -->
    <string name="robot_arm_rotate">Rotate</string>
    <string name="robot_arm_elevate">Elevate</string>
    <string name="robot_arm_scope">Scope</string>
    <string name="robot_arm_articulate">Articulate</string>
    <string name="robot_arm_claw">Claw</string>
</resources>
